--- a/preloaded.html
+++ b/preloaded.html
@@ -6,7 +6,7 @@
     <script>const t0 = Date.now();</script>
     <script>
         for (let i = 1; i < 256; i++) {
-            document.head.insertAdjacentHTML('beforeend', `<link rel="modulepreload" href="js/deps/module${i}.js">`)
+            document.head.insertAdjacentHTML('beforeend', `<link rel="modulepreload" href="js/p/module${i}.js">`)
         }
     </script>
 </head>
