--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body><div class="header">
-    <h1>Illustration for post <a href="https://marian-caikovski.medium.com/does-preloading-of-modules-make-sense-7c3ee9ccdd45">Striking effect of module preloading</a></h1>
+    <h1>Illustration for post <a href="https://marian-caikovski.medium.com/does-preloading-of-modules-make-sense-7c3ee9ccdd45">Effect of module preloading and caching</a></h1>
 </div></body>
 
 </html>
